# mal-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  tests.yml
enum-from-struct/: Cargo.toml
enum-from-struct/src/: lib.rs
examples/anime/: Cargo.toml
examples/anime/src/: main.rs
examples/auth-endpoints/: Cargo.toml
examples/auth-endpoints/src/: main.rs
examples/cli/: Cargo.toml
examples/cli-auth/: Cargo.toml
examples/cli-auth/src/: main.rs
examples/cli/src/: main.rs
examples/forum/: Cargo.toml
examples/forum/src/: main.rs
examples/manga/: Cargo.toml
examples/manga/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/update_and_delete/: Cargo.toml
examples/update_and_delete/src/: main.rs
examples/user/: Cargo.toml
examples/user/src/: main.rs
mal-api/: Cargo.toml
mal-api/src/: anime.rs  common.rs  forum.rs  lib.rs  macros.rs  manga.rs  oauth.rs
mal-api/src/anime/: api.rs  error.rs  requests.rs  responses.rs
mal-api/src/forum/: api.rs  error.rs  requests.rs  responses.rs
mal-api/src/manga/: api.rs  requests.rs  responses.rs
mal-api/src/user/: api.rs
mal-rs/: Cargo.toml
mal-rs/src/: anime.rs  common.rs  forum.rs  lib.rs  macros.rs  manga.rs  oauth.rs  user.rs
mal-rs/src/anime/: api.rs  error.rs  requests.rs  responses.rs
mal-rs/src/forum/: api.rs  requests.rs  responses.rs
mal-rs/src/manga/: api.rs  error.rs  requests.rs  responses.rs
mal-rs/src/user/: api.rs  error.rs  requests.rs  responses.rs
