[package]
name = "mal-api"
version = "1.0.0"
edition = "2021"
authors = ["dobecad https://github.com/dobecad"]
license = "MIT"
repository = "https://github.com/dobecad/mal-rs"
description = "An asynchronous MyAnimeList (MAL) API library for Rust"
keywords = ["async", "mal", "myanimelist", "anime", "manga"]
categories = ["asynchronous", "api-bindings"]
readme = "../README.md"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "4.4.1", features = ["pkce-plain"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_urlencoded = "0.7.1"
url = "2.4.0"
reqwest = { version = "0.11.18", features = ["serde_json"] }
async-trait = "0.1.68"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.0"
toml = "0.7.6"

[features]
full = ["forum", "user"]
forum = []
user = []
