[package]
name = "manga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
mal-rs = { path = "../../mal-rs", features = [
    "manga",
], default-features = false }
dotenvy = "0.15.7"
